--- a/style.css
+++ b/style.css
@@ -318,6 +318,11 @@ transition: ease 0.5s;
     margin-bottom: 15px;
 }
 
+.maglaro-description{
+    font-family: "Roboto Condensed", serif;
+    font-size: 30px;
+}
+
 #maglaro-home div p:nth-child(3){
     margin-bottom: 400px;
 }
