--- a/style.css
+++ b/style.css
@@ -1,7 +1,14 @@
 
-/*MAIN MENU*/
+
+/* MAIN MENU */
 /*-----------------------------------------------------------------------------------------------------------*/
-#main-menu{
+*{
+    margin: 0px;
+    padding: 0px;
+    box-sizing: border-box;
+}
+
+#main-menu {
     display: flex;
     flex-direction: column;
     width: 100vw;
@@ -10,81 +17,77 @@
     justify-content: center;
 }
 
-.main-menu-logo{
+.main-menu-logo {
     display: flex;
     flex-direction: row;
     justify-content: center;
     align-content: center;
-    margin-top: 100px;
+    margin-top: 10vh;
 }
 
-.main-menu-logo p{
-    height: 280px;
-    margin-left: 20px;
-
+.main-menu-logo p {
+    height: 15vw;
+    margin-left: 0.7vw;
     font-family: "Jersey 10", serif;
     font-weight: 400;
-    font-size: 300px;
+    font-size: 17vw;
     font-style: normal;
     border: white;
     color: #5b1c14;
     text-shadow: 
-    8px 8px 0 white, 
-    -8px 8px 0 white, 
-    8px -8px 0 white, 
-    -8px -8px 0 white; /* Creates the border effect */
+        0.5vw 0.5vw 0 white, 
+        -0.5vw 0.5vw 0 white, 
+        0.5vw -0.5vw 0 white, 
+        -0.5vw -0.5vw 0 white; /* Creates the border effect */
 }
 
-.main-menu-logo p:nth-child(1){
-    margin-left: 60px;
+.main-menu-logo p:nth-child(1) {
+    margin-left: 1vw;
 }
 
-.main-menu-logo img{
-    margin-top: 50px;
+.main-menu-logo img {
+    margin-top: 2vh;
     object-fit: contain;
-    width: 180px;
+    width: 8vw;
 }
 
-.menu-buttons{
+.menu-buttons {
     display: flex;
     flex-direction: row;
-    margin-bottom: 300px;
+    margin-bottom: 10vw;
 }
 
-
-.menu-button button{
-width: 260px;
-height: 90px;
-margin: 10px;
-font-family: "Alfa Slab One", serif;
-font-weight: 400;
-font-style: normal;
-font-size: 30px;
-border-radius: 30px;
-border: 4px solid white;
-color: white;
-transition: ease 0.5s;
+.menu-button button {
+    width: 15vw;
+    height: 10vh;
+    margin: 1vw;
+    font-family: "Alfa Slab One", serif;
+    font-weight: 400;
+    font-style: normal;
+    font-size: 2vw;
+    border-radius: 1vw;
+    border: 0.3vw solid white;
+    color: white;
+    transition: ease 0.5s;
 }
 
-.menu-button button:hover{
-    width: 280px;
-    height: 90px;
+.menu-button button:hover {
+    width: 16vw;
+    height: 11vh;
 }
 
-#matuto{
+#matuto {
     background-color: #212020;
 }
 
-#maglaro{
+#maglaro {
     background-color: #5b1c14;
 }
 /*-----------------------------------------------------------------------------------------------------------*/
 
-
-
-/*MATUTO*/
+/* MATUTO */
 /*-----------------------------------------------------------------------------------------------------------*/
-#matuto-home{
+#matuto-home {
     height: 100vh;
     position: relative;
     overflow: visible;
@@ -93,87 +96,96 @@ transition: ease 0.5s;
     justify-content: center;
 }
 
-#white-background{
+#white-background {
     display: flex;
     position: relative;
     overflow: visible;
     width: 80vw;
-    height: 60vh;
+    height: 63vh;
     margin-top: 20vh;
     background-color: white;
-    border-radius: 30px;
-    padding: 50px;
+    border-radius: 3vw;
+    padding: 3vw;
 }
 
-#white-background img{
+#white-background img {
     position: absolute;
     top: -30%;
     left: -8%;
     object-fit: contain;
     width: 25vw;
-    margin-bottom: 300px;
+    margin-bottom: 30vh;
 }
 
-#greetings{
+#greetings {
     display: flex;
     flex-direction: column;
-    width: 50vw;
+    width: 54vw;
     margin-left: 15vw;
 }
 
 #greetings p:nth-child(1),
-#greetings p:nth-child(2){
+
+
+#greetings p:nth-child(2) {
     font-family: "Jersey 10", serif;
 }
 
-#greetings p:nth-child(1){
-    font-size: 100px;
+#greetings p:nth-child(1) {
+    font-size: 5.8vw;
+    height: 9vh;
 }
 
-#greetings p:nth-child(2){
-    font-size: 70px;
+#greetings p:nth-child(2) {
+    font-size: 4vw;
     margin-bottom: 2vw;
 }
 
 #greetings p:nth-child(3),
-#greetings p:nth-child(4){
+#greetings p:nth-child(4) {
     font-family: "Roboto Condensed", serif;
-    font-size: 30px;
+    font-size: 2vw;
 }
 
-#white-background button{
+#white-background button {
     position: absolute;
     overflow: visible;
-    right: 35px;
-    top: 460px;
+    right: 3vw;
+    top: 46vh;
     text-decoration: none;
     color: #5b1c14;
 }
 
-#technique-menus{
+#technique-menus {
     display: none;
     flex-direction: column;
 }
 
-#technique-menus div:nth-child(1){
+
+
+#technique-menus div:nth-child(1) {
     margin-left: 15vw;
     margin-bottom: 6vh;
     width: 70vw;
 }
 
 #technique-menus div:nth-child(1) p:nth-child(1),
-#technique-menus div:nth-child(1) p:nth-child(2){
+#technique-menus div:nth-child(1) p:nth-child(2) {
     font-family: "Jersey 10", serif;
-    font-size: 2.3vw;
-    margin-bottom: 3vh;
+    font-size: 2.4vw;
+    height: 4.5vh;
 }
 
-#technique-menus div:nth-child(1) p:nth-child(3){
+#technique-menus div:nth-child(1) p:nth-child(2){
+    margin-bottom: 2vw;
+}
+
+#technique-menus div:nth-child(1) p:nth-child(3) {
     font-family: "Roboto Condensed", serif;
-    font-size: 1.4vw;
+    font-size: 2vw;
 }
 
-#technique-menus div:nth-child(2){
+#technique-menus div:nth-child(2) {
     display: flex;
     flex-flow: wrap;
     width: 50vw;
@@ -181,7 +193,7 @@ transition: ease 0.5s;
     margin-left: 10vw;
 }
 
-#technique-menus div:nth-child(2) a{
+#technique-menus div:nth-child(2) a {
     font-family: "Alfa Slab One", serif;
     font-size: 2.5vw;
     margin: 0.6vw;
@@ -194,84 +206,68 @@ transition: ease 0.5s;
     transition: 0.5s ease;
 }
 
-#technique-menus div:nth-child(2) a:hover{
+#technique-menus div:nth-child(2) a:hover {
     width: 21vw;
 }
 
-#magpatuloy-button{
+#magpatuloy-button {
     all: unset;
-
 }
 
-.magpatuloy{
+.magpatuloy {
+    position: relative;
     display: flex;
     flex-direction: row;
     align-items: center;
     margin-top: 1.3vh;
     background-color: #ddba01;
-    border: 5px solid black;
-    width: 250px;
-    height: 70px;
-    border-radius: 0px 20px 20px 0px;
+    border: 0.3vw solid black;
+    width: 22vw;
+    height: 7vh;
+    border-radius: 0 2vw 2vw 0;
     transition: 0.5s ease;
 }
 
-.magpatuloy:hover{
-    width: 280px;
+.magpatuloy:hover {
+    width: 23vw;
 }
 
-.magpatuloy p{
+.magpatuloy p {
     position: absolute;
-    right: 10vw;
+    right: 28%;
     font-family: "Jersey 10", serif;
     font-weight: 700;
-    font-size: 50px;
-
+    font-size: 3vw;
 }
 
-.magpatuloy div:nth-child(2){
+.magpatuloy div:nth-child(2) {
     background-color: #5b1c14;
     width: 0.7vw;
-    height: 50px;
-    margin: 2px;
-    margin-left: 150px;
+    height: 5vh;
+    margin: 0.2vw;
+    margin-left: 17vw;
 }
 
-.magpatuloy div:nth-child(3){
-
+.magpatuloy div:nth-child(3),
+.magpatuloy div:nth-child(4) {
     background-color: #5b1c14;
     width: 0.7vw;
-    height: 50px;
-    margin: 2px;
-}   
-.magpatuloy div:nth-child(4){
-
-    background-color: #5b1c14;
-    width: 0.7vw;
-    height: 50px;
-    margin: 2px;
-}  
-
-.magpatuloy div:nth-child(5){
-
-    height: 30px;
-    margin: 2px;
-    border-top: 40px solid transparent; /* Transparent top border */
-    border-left: 40px solid #5b1c14;      /* Visible left border forms the triangle */
-    border-bottom: 40px solid transparent; /* Transparent bottom border */
+    height: 5vh;
+    margin: 0.2vw;
 }
 
-
-
-
+.magpatuloy div:nth-child(5) {
+    height: 3vh;
+    margin: 0.3vw;
+    border-top: 1.5vw solid transparent; /* Transparent top border */
+    border-left: 1.5vw solid #5b1c14;      /* Visible left border forms the triangle */
+    border-bottom: 1.5vw solid transparent; /* Transparent bottom border */
+}
 
 /*-----------------------------------------------------------------------------------------------------------*/
 
-
-
-/*MAGLARO*/
+/* MAGLARO */
 /*-----------------------------------------------------------------------------------------------------------*/
-
 #maglaro-home{
     display: flex;
     flex-direction: row;
@@ -287,23 +283,41 @@ transition: ease 0.5s;
     overflow: visible;
     flex-direction: column;
     align-items: center;
-    width: 430px;
-    height: 500px;
-    border: 5px solid white;
-    margin: 20px;
-    padding: 60px;
+    width: 44vw;
+    height: 52vh;
+    border: 1vw solid white;
+    margin: 2vw;
+    padding: 3vw;
 }  
+
+
 
 #pagtutugma{
     background: #212020;
 }
 
+#pagtutugma img{
+    object-fit: contain;
+    width: 4vw;
+}
+
+
 #sitwasyonal{
     background-color: #5b1c14;
 }
 
+#sitwasyonal img{
+    object-fit: contain;
+    width: 3vw;
+}
+
 #limitadong-oras{
     background-color: #212020;
+}
+
+#limitadong-oras img{
+    object-fit: contain;
+    width: 4vw;
 }
 
 #maglaro-home div p{
@@ -311,41 +325,48 @@ transition: ease 0.5s;
     color: white;
 }
 
+
 .maglaro-title{
     color: white;
-    font-size: 70px;
-    margin-bottom: 15px;
+    font-size: 2.7vw;
+    margin-bottom: 1.5vh;
 }
 
 .maglaro-description{
     font-family: "Roboto Condensed", serif;
-    font-size: 30px;
+    font-size: 1.4vw;
     text-align: center;
 }
 
+#limitadog-oras p:nth-child(1),
+#limitadog-oras p:nth-child(2){
+     font-size: 3.1vw;   
+}
+
 #maglaro-home div p:nth-child(3){
-    margin-bottom: 400px;
+    margin-bottom: 42.2vh;
 }
 
 .menu-container{
     display: flex;
     position: absolute;
-    bottom: 200px;
+    bottom: 21.1vh;
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    width: 250px;
-    height: 240px;
+    width: 26vw;
+    height: 25.3vh;
 }
 
 .menu-container button{
-    width: 100%;
-    height: 100%;
+    width: 12vw;
+    height: 12vh;
     font-family: "Jersey 10", serif;
-    font-size: 3em;
-    border: 5px solid white;
+    font-size: 2vw;
+    border: 0.3vw solid white;
     background-color: #ddba01;
     transition: 0.5s ease;
+    margin-bottom: 1.8vh;
 }
 
 .menu-container button:hover{
@@ -358,24 +379,25 @@ transition: ease 0.5s;
     text-decoration: none;
     text-align: center;
     font-family: "Alfa Slab One", serif;
+    font-size: 1vw;
     background-color: #ddba01;
-    border: 2px solid white;
+    border: 0.2vw solid white;
     color: black;
-    width: 300px;
-    height: 60px;
-    margin: 10px;
-    padding: 15px;
+    width: 20vw;
+    height: 6vh;
+    margin: 0.5vw;
+    padding: 0.8vw;
     transition: 0.5s ease;
 }
 
 .menu-container a:hover{
-    width: 310px;
-    height: 70px;
+    width: 22vw;
 }
 
 .menu-container a:nth-child(2) {
-    margin-bottom: 80px;
+    margin-bottom: 3vh;
 }
+
 /*-----------------------------------------------------------------------------------------------------------*/
 
 
