--- a/global.css
+++ b/global.css
@@ -46,7 +46,7 @@ width: 8vw;
 }
 
 .bumalik{
-    width: 18vw;
+    width: 22vw;
     height: 10vh;
     display: flex;
     flex-direction: row;
@@ -55,18 +55,18 @@ width: 8vw;
     margin-top: 2vh;
     margin-left: 2vw;
     background-color: #ddba01;
-    border: 4px solid black;
+    border: 0.4vw solid black;
     border-radius: 2vw 0vw 0vw 2vw; 
     transition: 0.5s ease;
 }
 
 .bumalik:hover{
-    width: 20vw;
+    width: 24vw;
 }
 
 .bumalik-button p{
     position: absolute;
-    left: 60%;
+    left: 45%;
     font-family: "Jersey 10", serif;
     font-size: 4vw;
     text-align: center;
@@ -76,7 +76,7 @@ width: 8vw;
 .bumalik div:nth-child(4){
     width: 1vw;
     height: 6vh;
-    margin-right: 10vw;
+    margin-right: 14vw;
     background-color: #5b1c14;
 }
 
