--- a/maglaro/style/limitadong-oras.css
+++ b/maglaro/style/limitadong-oras.css
@@ -3,6 +3,12 @@
 /* font-family: "Roboto Condensed", serif; */
 /* font-family: "Montserrat", serif; */
 /* Overlay to gray out the background */
+* {
+    margin: 0px;
+    padding: 0px;
+    box-sizing: border-box;
+}
+
 .overlay {
     display: none;
     position: fixed;
@@ -28,7 +34,7 @@
     width: 60vw;
     height: 60vh;
     background-color: white;
-    border-radius: 40px;
+    border-radius: 2vw;
     z-index: 20;
     box-shadow: 0px 4px 15px rgba(0, 0, 0, 0.2);
 }
@@ -41,7 +47,7 @@
 /* -------------------TAMA MODAL------------------------ */
 .tama img{
     object-fit: contain;
-    width: 23vw;
+    width: 30vw;
 }
 
 
@@ -57,13 +63,7 @@
     margin-bottom: 10vh;
 }
 
-#tama-magpatuloy{
-    position: absolute;
-    bottom: 10%;
-    left: 5%;
-    width: 22vw;
-    height: 12vh;
-}
+
 
 .magpatuloy{
     display: flex;
@@ -80,9 +80,20 @@
     width: 24vw;
 }
 
+#tama-magpatuloy{
+    position: absolute;
+    bottom: 10%;
+    left: 7%;
+    transition: 0.5s ease;
+}
+
+#tama-magpatuloy:hover{
+    padding-left: 2vw;
+}
+
  .magpatuloy p{
     font-family: "Jersey 10", serif;
-    font-size: 3.2vw;
+    font-size: 2.5vw;
  }
 
  .magpatuloy div:nth-child(2){
@@ -109,7 +120,7 @@
  .magpatuloy div:nth-child(5){
     height: 8vh;
     margin: 2px;
-    
+    margin-right: 3px;
     border-top: 40px solid transparent; /* Transparent top border */
     border-left: 40px solid #5b1c14;      /* Visible left border forms the triangle */
     border-bottom: 40px solid transparent; /* Transparent bottom border */
@@ -127,12 +138,15 @@
 #description-mali{
     font-family: "Jersey 10", serif;
     font-size: 8vw;
+    height: 6vw;
+    margin-left: 1vw;
 }
 
 .explanations{
     font-family: "Montserrat", serif;
     font-weight: 600;
     margin-bottom: 10vh;
+    margin-right: 3vw;
 }
 
 .explanations p:nth-child(1){
@@ -141,6 +155,7 @@
 }
 
 .explanations p{
+    font-size: 1vw;
     margin: 1vw;
 }
 
@@ -148,42 +163,45 @@
     position: absolute;
     right: 12%;
     bottom: 5%;
+    padding: 7px;
 }
+
+
 
 .magpatuloy div:nth-child(2){
     width: 2vw;
-    height: 5vh;
+    height: 4vh;
     background-color: #5b1c14;
     margin: 0.3vw;
  }
 
  .magpatuloy div:nth-child(3){
     width: 2vw;
-    height: 5vh;
+    height: 4vh;
     background-color: #5b1c14;
     margin: 0.3vw;
  } 
 
  .magpatuloy div:nth-child(4){
     width: 2vw;
-    height: 5vh;
+    height: 4vh;
     background-color: #5b1c14;
     margin: 0.3vw;
  }
 
  .magpatuloy div:nth-child(5){
-    height: 8vh;
-    margin: 2px;
+    height: 2vh;
+    margin: 0.5vw;
     
-    border-top: 40px solid transparent; /* Transparent top border */
-    border-left: 40px solid #5b1c14;      /* Visible left border forms the triangle */
-    border-bottom: 40px solid transparent; /* Transparent bottom border */
+    border-top: 2vw solid transparent; /* Transparent top border */
+    border-left: 2vw solid #5b1c14;      /* Visible left border forms the triangle */
+    border-bottom: 2vw solid transparent; /* Transparent bottom border */
 }
 
 /* -------------------TAMA MODAL------------------------ */
 
 
-
+ 
 
 
 
@@ -203,7 +221,7 @@
     align-items: center;
     margin-top: 14vh;
     border: 0.4vw solid #5b1c14;
-    background-color: #ddba01;
+    background-color: #fff8d6;
     border-radius: 1vw;
     width: 80vw;
     height: 50vh;
@@ -211,27 +229,29 @@
 
 #phrase{
     font-family: "Roboto Condensed", serif;
+    font-weight: bold;
     color: #5b1c14;
-    font-size: 3vw;
+    font-size: 3.3vw;
     margin-top: 10vh;
     margin-bottom: 5vh;
+    text-align: center;
+    height: 14vh;
 }
 
 #timer{
     margin-bottom: 12vh;
-    font-family: "Roboto Condensed", serif;
-    color: black;
+    font-family: "Jersey 10", serif;
+    color: #BD7E01;
     font-size: 3vw;
 }
 
 #translation{
-    font-size: 30px;
+    font-size: 2.5vw;
     font-family: "Roboto Condensed", serif;
-
+    border: 0.5vw solid #BD7E01;
     position: absolute;
     right: 11%;
     bottom: 38%;
-    border: none;
     padding: 2vw;
     background-color: white;
     width: 78vw;
@@ -240,20 +260,19 @@
 }
 
 .done-button{
-    display: block;
     margin-top: 6vw;
     width: 40vw;
-    height: 10vh;
+    height: 14vh;
     font-family: "Jersey 10", serif;
     background-color: #ddba01;
     font-size: 5vw;
     transition: 0.5s ease;
-    border: 8px solid #5b1c14;
+    border: 0.6vw solid #5b1c14;
+    text-align: center;
 }
 
 .done-button:hover{
     width: 42vw;
-    height: 12vh;
 }
 
 .next-button{
