--- a/maglaro/style/limitadong-oras.css
+++ b/maglaro/style/limitadong-oras.css
@@ -19,186 +19,511 @@
     background-color: rgba(0, 0, 0, 0.5);
     z-index: 10;
 }
+/* --------------------------------MAIN--------------------------------- */
+/* main desktop */
+@media (min-width: 801px){
+    .tama, .mali {
+        display: none;
+        position: fixed;
+        top: 40%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        justify-content: space-evenly;
+        align-items: center;
+        flex-direction: row;
+        overflow: visible;
+        padding: 2vw;
+        width: 60vw;
+        height: 60vh;
+        background-color: white;
+        border-radius: 2vw;
+        z-index: 20;
+        box-shadow: 0px 4px 15px rgba(0, 0, 0, 0.2);
+    }
 
-.tama, .mali {
-    display: none;
-    position: fixed;
-    top: 40%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    justify-content: space-evenly;
+    .tama-magpatuloy-button, .mali-magpatuloy-button {
+        all: unset;
+        cursor: pointer;
+    }
+
+    .sub-menu{
+        display: flex;
+        flex-direction: column;
     align-items: center;
-    flex-direction: row;
-    overflow: visible;
-    padding: 2vw;
-    width: 60vw;
-    height: 60vh;
-    background-color: white;
-    border-radius: 2vw;
-    z-index: 20;
-    box-shadow: 0px 4px 15px rgba(0, 0, 0, 0.2);
+    }
+
+    .game-container{
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        margin-top: 14vh;
+        border: 0.4vw solid #5b1c14;
+        background-color: #fff8d6;
+        border-radius: 1vw;
+        width: 80vw;
+        height: 50vh;
+    }
+
+    #phrase{
+        font-family: "Roboto Condensed", serif;
+        font-weight: bold;
+        color: #5b1c14;
+        font-size: 3.3vw;
+        margin-top: 10vh;
+        margin-bottom: 5vh;
+        text-align: center;
+        height: 14vh;
+    }
+
+    #timer{
+        margin-bottom: 12vh;
+        font-family: "Jersey 10", serif;
+        color: #BD7E01;
+        font-size: 3vw;
+    }
+
+    #translation{
+        font-size: 2.5vw;
+        font-family: "Roboto Condensed", serif;
+        border: 0.5vw solid #BD7E01;
+        position: absolute;
+        right: 11%;
+        bottom: 38%;
+        padding: 2vw;
+        background-color: white;
+        width: 78vw;
+        height: 12vh;
+        border-radius: 1vw;
+    }
+
+    .done-button{
+        margin-top: 6vw;
+        width: 40vw;
+        height: 14vh;
+        font-family: "Jersey 10", serif;
+        background-color: #ddba01;
+        font-size: 5vw;
+        transition: 0.5s ease;
+        border: 0.6vw solid #5b1c14;
+        text-align: center;
+    }
+
+    .done-button:hover{
+        width: 42vw;
+    }
+
+    .next-button{
+        display: none;
+        margin-top: 10vw;
+        width: 40vw;
+        height: 10vh;
+        font-family: "Jersey 10", serif;
+        background-color: #ddba01;
+        font-size: 5vw;
+    }
 }
 
-.tama-magpatuloy-button, .mali-magpatuloy-button {
-    all: unset;
-    cursor: pointer;
+/* main phone */
+@media (max-width: 800px){
+    .tama, .mali {
+        display: none;
+        position: fixed;
+        top: 40%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        justify-content: space-evenly;
+        align-items: center;
+        flex-direction: row;
+        overflow: visible;
+        padding: 2vw;
+        width: 90vw;
+        height: 70vw;
+        background-color: white;
+        border-radius: 2vw;
+        z-index: 20;
+        box-shadow: 0px 4px 15px rgba(0, 0, 0, 0.2);
+    } 
+
+    .sub-menu{
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .game-container{
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        margin-top: 14vh;
+        border: 0.4vw solid #5b1c14;
+        background-color: #fff8d6;
+        border-radius: 1vw;
+        width: 90vw;
+        height: 55vh;
+    }
+
+    #phrase{
+        font-family: "Roboto Condensed", serif;
+        font-weight: bold;
+        color: #5b1c14;
+        font-size: 5vw;
+        margin-top: 10vh;
+        text-align: center;
+        height: 14vh;
+    }
+
+    #timer{
+        margin-bottom:5vh;
+        font-family: "Jersey 10", serif;
+        color: #BD7E01;
+        font-size: 6vw;
+    }
+
+    #translation{
+        font-size: 5vw;
+        font-family: "Roboto Condensed", serif;
+        border: 0.5vw solid #BD7E01;
+        padding: 2vw;
+        background-color: white;
+        width: 78vw;
+        height: 8vh;
+        margin-bottom: 2vh;
+        border-radius: 1vw;
+    }
+
+    .done-button{
+        margin-top: 6vw;
+        width: 75vw;
+        height: 6vh;
+        font-family: "Jersey 10", serif;
+        background-color: #ddba01;
+        font-size: 5vw;
+        transition: 0.5s ease;
+        border: 0.6vw solid #5b1c14;
+        text-align: center;
+    }
+
+    .done-button:hover{
+        width: 42vw;
+    }
+
+    .next-button{
+        display: none;
+        margin-top: 10vw;
+        width: 40vw;
+        height: 10vh;
+        font-family: "Jersey 10", serif;
+        background-color: #ddba01;
+        font-size: 5vw;
+    }
+
+    .magpatuloy{
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+        width: 22vw;
+        height: 10vh;
+        background-color: #ddba01;
+        border-radius: 0vw 2vw 2vw 0vw;
+        transition: 0.5s ease;
+    }
+
+    .magpatuloy:hover{
+        width: 24vw;
+    }
+
+
+    .magpatuloy p{
+        font-family: "Jersey 10", serif;
+        margin-left: 4vw;
+        margin-right: 4vw;
+        font-size: 10vw;
+    }
+
+    .magpatuloy div:nth-child(2){
+        width: 2vw;
+        height: 8vh;
+        background-color: #5b1c14;
+        margin: 0.3vw;
+    }
+
+    .magpatuloy div:nth-child(3){
+        width: 2vw;
+        height: 8vh;
+        background-color: #5b1c14;
+        margin: 0.3vw;
+    } 
+
+    .magpatuloy div:nth-child(4){
+        width: 2vw;
+        height: 8vh;
+        background-color: #5b1c14;
+        margin: 0.3vw;
+    }
+
+    .magpatuloy div:nth-child(5){
+        height: 2vh;
+        margin: 0.5vw;
+        
+        border-top: 8vw solid transparent; /* Transparent top border */
+        border-left: 8vw solid #5b1c14;      /* Visible left border forms the triangle */
+        border-bottom: 8vw solid transparent; /* Transparent bottom border */
+    }
 }
+
 
 /* -------------------TAMA MODAL------------------------ */
-.tama img{
-    object-fit: contain;
-    width: 30vw;
+/* tama desktop */
+@media (min-width: 801px){
+    .tama img{
+        object-fit: contain;
+        width: 30vw;
+    }
+
+
+    #description-tama{
+        font-family: "Jersey 10", serif;
+        font-size: 8vw;
+        color: black;
+    }
+
+    .container-1 p:nth-child(2){
+        font-family: "Jersey 10", serif;
+        font-size: 3vw; 
+        margin-bottom: 10vh;
+    }
+
+
+    .magpatuloy{
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+        width: 22vw;
+        height: 10vh;
+        background-color: #ddba01;
+        border-radius: 0vw 2vw 2vw 0vw;
+        transition: 0.5s ease;
+    }
+
+    .magpatuloy:hover{
+        width: 24vw;
+    }
+
+    #tama-magpatuloy{
+        position: absolute;
+        bottom: 10%;
+        left: 7%;
+        transition: 0.5s ease;
+    }
+
+    #tama-magpatuloy:hover{
+        padding-left: 2vw;
+    }
+
+    .magpatuloy p{
+        font-family: "Jersey 10", serif;
+        font-size: 2.5vw;
+    }
+
+    .magpatuloy div:nth-child(2){
+        width: 2vw;
+        height: 5vh;
+        background-color: #5b1c14;
+        margin: 0.3vw;
+    }
+
+    .magpatuloy div:nth-child(3){
+        width: 2vw;
+        height: 5vh;
+        background-color: #5b1c14;
+        margin: 0.3vw;
+    } 
+
+    .magpatuloy div:nth-child(4){
+        width: 2vw;
+        height: 5vh;
+        background-color: #5b1c14;
+        margin: 0.3vw;
+    }
+
+    .magpatuloy div:nth-child(5){
+        height: 8vh;
+        margin: 2px;
+        margin-right: 3px;
+        border-top: 40px solid transparent; /* Transparent top border */
+        border-left: 40px solid #5b1c14;      /* Visible left border forms the triangle */
+        border-bottom: 40px solid transparent; /* Transparent bottom border */
+    }
 }
 
+/* tama phone */
+@media (max-width: 800px){
+    #description-tama{
+        font-family: "Jersey 10", serif;
+        font-size: 15vw;
+        color: black;
+        margin-bottom: 4vh;
+        margin-top: 10vh;
+        text-align: center;
+    }
 
-#description-tama{
-    font-family: "Jersey 10", serif;
-    font-size: 8vw;
-    color: black;
+    .container-1 p:nth-child(2){
+        font-family: "Jersey 10", serif;
+        font-size: 10vw; 
+        margin-bottom: 10vh;
+        text-align: center;
+    }
+
+    #tama-magpatuloy{
+        position: absolute;
+        bottom: -40%;
+        left: 10%;
+        width: 72vw;
+        height: 10vh;
+        transition: 0.5s ease;
+        border: 1vw solid black;
+    }
+
+    #tama-magpatuloy:hover{
+        width: 24vw;
+    }
+
+    .tama-magpatuloy-button{
+        all: unset;
+        cursor: pointer;
+    }
+
+    .tama img{
+        object-fit: contain;
+        width: 40vw;
+    }
 }
-
-.container-1 p:nth-child(2){
-    font-family: "Jersey 10", serif;
-    font-size: 3vw; 
-    margin-bottom: 10vh;
-}
-
-
-
-.magpatuloy{
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    width: 22vw;
-    height: 10vh;
-    background-color: #ddba01;
-    border-radius: 0vw 2vw 2vw 0vw;
-    transition: 0.5s ease;
-}
-
-.magpatuloy:hover{
-    width: 24vw;
-}
-
-#tama-magpatuloy{
-    position: absolute;
-    bottom: 10%;
-    left: 7%;
-    transition: 0.5s ease;
-}
-
-#tama-magpatuloy:hover{
-    padding-left: 2vw;
-}
-
- .magpatuloy p{
-    font-family: "Jersey 10", serif;
-    font-size: 2.5vw;
- }
-
- .magpatuloy div:nth-child(2){
-    width: 2vw;
-    height: 5vh;
-    background-color: #5b1c14;
-    margin: 0.3vw;
- }
-
- .magpatuloy div:nth-child(3){
-    width: 2vw;
-    height: 5vh;
-    background-color: #5b1c14;
-    margin: 0.3vw;
- } 
-
- .magpatuloy div:nth-child(4){
-    width: 2vw;
-    height: 5vh;
-    background-color: #5b1c14;
-    margin: 0.3vw;
- }
-
- .magpatuloy div:nth-child(5){
-    height: 8vh;
-    margin: 2px;
-    margin-right: 3px;
-    border-top: 40px solid transparent; /* Transparent top border */
-    border-left: 40px solid #5b1c14;      /* Visible left border forms the triangle */
-    border-bottom: 40px solid transparent; /* Transparent bottom border */
-}
-/* -------------------TAMA MODAL------------------------ */
+/* ------------------------------------------- */
 
 
 /* -------------------MALI MODAL------------------------ */
-
-.mali img {
-    object-fit: contain;
-    width: 23vw;
-}
-
-#description-mali{
-    font-family: "Jersey 10", serif;
-    font-size: 8vw;
-    height: 6vw;
-    margin-left: 1vw;
-}
-
-.explanations{
-    font-family: "Montserrat", serif;
-    font-weight: 600;
-    margin-bottom: 10vh;
-    margin-right: 3vw;
-}
-
-.explanations p:nth-child(1){
-    font-size: 2vw;
-    color: #5a2805;
-}
-
-.explanations p{
-    font-size: 1vw;
-    margin: 1vw;
-}
-
-#mali-magpatuloy{
-    position: absolute;
-    right: 12%;
-    bottom: 5%;
-    padding: 7px;
-}
-
-
-
-.magpatuloy div:nth-child(2){
-    width: 2vw;
-    height: 4vh;
-    background-color: #5b1c14;
-    margin: 0.3vw;
- }
-
- .magpatuloy div:nth-child(3){
-    width: 2vw;
-    height: 4vh;
-    background-color: #5b1c14;
-    margin: 0.3vw;
- } 
-
- .magpatuloy div:nth-child(4){
-    width: 2vw;
-    height: 4vh;
-    background-color: #5b1c14;
-    margin: 0.3vw;
- }
-
- .magpatuloy div:nth-child(5){
-    height: 2vh;
-    margin: 0.5vw;
+/* mali desktop */
+@media (min-width: 801px){
     
-    border-top: 2vw solid transparent; /* Transparent top border */
-    border-left: 2vw solid #5b1c14;      /* Visible left border forms the triangle */
-    border-bottom: 2vw solid transparent; /* Transparent bottom border */
+    .mali img {
+        object-fit: contain;
+        width: 23vw;
+    }
+
+    
+    #description-mali{
+        font-family: "Jersey 10", serif;
+        font-size: 8vw;
+        height: 6vw;
+        margin-left: 1vw;
+        text-align: center;
+    }
+
+    .explanations{
+        font-family: "Montserrat", serif;
+        font-weight: 600;
+        margin-bottom: 10vh;
+        margin-right: 3vw;
+        text-align: center;
+    }
+
+    .explanations p:nth-child(1){
+        font-size: 2vw;
+        color: #5a2805;
+    }
+
+    .explanations p{
+        font-size: 1vw;
+        margin: 1vw;
+    }
+
+    #mali-magpatuloy{
+        position: absolute;
+        right: 12%;
+        bottom: 5%;
+        padding: 7px;
+    }
+
+    .magpatuloy div:nth-child(2){
+        width: 2vw;
+        height: 4vh;
+        background-color: #5b1c14;
+        margin: 0.3vw;
+    }
+
+    .magpatuloy div:nth-child(3){
+        width: 2vw;
+        height: 4vh;
+        background-color: #5b1c14;
+        margin: 0.3vw;
+    } 
+
+    .magpatuloy div:nth-child(4){
+        width: 2vw;
+        height: 4vh;
+        background-color: #5b1c14;
+        margin: 0.3vw;
+    }
+
+    .magpatuloy div:nth-child(5){
+        height: 2vh;
+        margin: 0.5vw;
+        
+        border-top: 2vw solid transparent; /* Transparent top border */
+        border-left: 2vw solid #5b1c14;      /* Visible left border forms the triangle */
+        border-bottom: 2vw solid transparent; /* Transparent bottom border */
+    }
 }
 
-/* -------------------TAMA MODAL------------------------ */
+/* mali phone */
+@media ( max-width: 800px){
+    .mali img {
+        object-fit: contain;
+        width: 30vw;
+    }
+
+    #description-mali{
+        font-family: "Jersey 10", serif;
+        font-size: 16vw;
+        height: 13vw;
+        margin-left: 15vw;
+        margin-top: 1vh;
+    }
+
+    .explanations{
+        font-family: "Montserrat", serif;
+        font-weight: 600;
+        margin-bottom: 10vh;
+        margin-left: 3vw;
+    }
+
+    .explanations p:nth-child(1){
+        font-size: 4vw;
+        color: #5a2805;
+    }
+
+    .explanations p{
+        font-size: 3vw;
+        margin: 1vw;
+    }
+
+    #mali-magpatuloy{
+        position: absolute;
+        bottom: -35%;
+        left: 10%;
+        width: 72vw;
+        height: 10vh;
+        transition: 0.5s ease;
+        border: 1vw solid black;
+    }
+
+    .times-up{
+
+    }
+
+
+}
+/* ------------------------------------------- */
 
 
  
@@ -209,81 +534,7 @@
 
 
 
-.sub-menu{
-    display: flex;
-    flex-direction: column;
- align-items: center;
-}
 
-.game-container{
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    margin-top: 14vh;
-    border: 0.4vw solid #5b1c14;
-    background-color: #fff8d6;
-    border-radius: 1vw;
-    width: 80vw;
-    height: 50vh;
-}
-
-#phrase{
-    font-family: "Roboto Condensed", serif;
-    font-weight: bold;
-    color: #5b1c14;
-    font-size: 3.3vw;
-    margin-top: 10vh;
-    margin-bottom: 5vh;
-    text-align: center;
-    height: 14vh;
-}
-
-#timer{
-    margin-bottom: 12vh;
-    font-family: "Jersey 10", serif;
-    color: #BD7E01;
-    font-size: 3vw;
-}
-
-#translation{
-    font-size: 2.5vw;
-    font-family: "Roboto Condensed", serif;
-    border: 0.5vw solid #BD7E01;
-    position: absolute;
-    right: 11%;
-    bottom: 38%;
-    padding: 2vw;
-    background-color: white;
-    width: 78vw;
-    height: 12vh;
-    border-radius: 1vw;
-}
-
-.done-button{
-    margin-top: 6vw;
-    width: 40vw;
-    height: 14vh;
-    font-family: "Jersey 10", serif;
-    background-color: #ddba01;
-    font-size: 5vw;
-    transition: 0.5s ease;
-    border: 0.6vw solid #5b1c14;
-    text-align: center;
-}
-
-.done-button:hover{
-    width: 42vw;
-}
-
-.next-button{
-    display: none;
-    margin-top: 10vw;
-    width: 40vw;
-    height: 10vh;
-    font-family: "Jersey 10", serif;
-    background-color: #ddba01;
-    font-size: 5vw;
-}
 
 
 
